# Tetris

./: CMakeLists.txt  Makefile  README.md  Tetris.code-workspace
assets/: settings.hpp
include/: AnimObject.hpp  CoreSystem.hpp  GameStateManager.hpp  Input.hpp  Piece.hpp  PieceManager.hpp  PieceSpawner.hpp  Square.hpp  StaticObject.hpp  TextObject.hpp  TextureManager.hpp  Vector2.hpp  Vector2Int.hpp
linux-build/: CMakeCache.txt  Makefile  Tetris  cmake_install.cmake
linux-build/assets/: settings.hpp
src/: AnimObject.cpp  CoreSystem.cpp  GameStateManager.cpp  Piece.cpp  PieceManager.cpp  PieceSpawner.cpp  Square.cpp  StaticObject.cpp  TextObject.cpp  TextureManager.cpp  main.cpp
windows-build/assets/: settings.hpp
